--- a/Loader/pom.xml
+++ b/Loader/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0</version>
     </parent>
 
-    <artifactId>loader</artifactId>
+    <artifactId>Loader</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
